# Neural-Decision-Forests

./: .gitignore  Pipfile  README.md  extract_layer.py  my_tree.py  ndf.py  pyproject.toml  setup.py  train.py
neural_decision_forest/: __init__.py  forest.py  tree.py
