[tool.poetry]
name = "neural-decision-forests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
torchvision = "^0.9.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
ipython = "^7.23.1"
black = "^21.5b0"
flake8 = "^3.9.2"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
